Significant additions to app.js logic and style.css.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="search" type="text/html" href="search.html">
   <link
     href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Gruppo|Montserrat:100,200,300,400,500,600,700,800,900|Quattrocento+Sans&display=swap"
     rel="stylesheet">
@@ -17,7 +18,10 @@
   <header>
     <nav>
       <H1>MentalHealthable</H1>
+      <h6><em>a curated feed for all things tech & wellness</em></h6>
       <!-- <img id="logo" src="_assets/mockup-desktop.png"> -->
+      <li><a href="search.html">Search</a></li>
+      <li><a href="index.html">Home</a></li>
     </nav>
   </header>
 
@@ -35,12 +39,17 @@
     </section>
 
     <section class="feed-section" class="dark-section">
-      <h2>Feed Section</h2>
+      <h2>The Latest</h2>
+      <!-- <button>Tech</button>
+      <button>Mobile Apps</button>
+      <button>Social Media</button> -->
     </section>
+
+    <button id="hi"></button>
   </main>
 
   <footer>
-
+    <p>Designed by Misha Kessler</p>
   </footer>
 </body>
 
