--- a/search.html
+++ b/search.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="search" type="text/html" href="search.html">
   <link
     href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Gruppo|Montserrat:100,200,300,400,500,600,700,800,900|Quattrocento+Sans&display=swap"
     rel="stylesheet">
@@ -9,3 +13,29 @@
   <script defer src="app.js"></script>
   <title>MentalHealthable</title>
 </head>
+
+<body>
+  <header>
+    <nav>
+      <H1>MentalHealthable</H1>
+      <h6><em>a curated feed for all things tech & wellness</em></h6>
+      <!-- <img id="logo" src="_assets/mockup-desktop.png"> -->
+      <li><a href="search.html">Search</a></li>
+      <li><a href="index.html">Home</a></li>
+    </nav>
+  </header>
+
+  <main>
+
+    <section class="hero-section">
+      <div class="search-section">
+        <input type="text">
+        <button>Search</button>
+      </div>
+    </section>
+
+    <section class="search-list">
+    </section>
+  </main>
+
+</body>
