--- a/search.html
+++ b/search.html
@@ -16,14 +16,18 @@
 
 <body>
   <header>
-    <nav>
-      <H1>MentalHealthable</H1>
+    <nav id="primaryNav">
+      <h1> <a href="index.html">MentalHealthable</a></h1>
       <h6><em>a curated feed for all things tech & wellness</em></h6>
       <!-- <img id="logo" src="_assets/mockup-desktop.png"> -->
-      <li><a href="search.html">Search</a></li>
+      <li><a href="search.html" id="searchbtn">Search</a></li>
+      <li><a href="search.html/#thelatest">The Latest</a></li>
+      <li><a href="search.html/#trending">Trending</a></li>
+      <li><a href="search.html/#editorspicks">Editors' Picks</a></li>
       <li><a href="index.html">Home</a></li>
     </nav>
   </header>
+
 
   <main>
 
