Completion of search logic.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="search" type="text/html" href="search.html">
   <link
     href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Gruppo|Montserrat:100,200,300,400,500,600,700,800,900|Quattrocento+Sans&display=swap"
     rel="stylesheet">
@@ -19,7 +18,7 @@
     <nav id="primaryNav">
       <h1> <a href="index.html">MentalHealthable</a></h1>
       <!-- <img id="logo" src="_assets/mockup-desktop.png"> -->
-      <li><a href="#search" id="searchbtn">Search</a></li>
+      <li><a href="#searching" id="searchCTA">Search</a></li>
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#trending">Trending</a></li>
       <li><a href="#editorspicks">Editors' Picks</a></li>
@@ -56,10 +55,17 @@
     <section class="feed-section">
     </section>
 
-    <section class="search-list" id="searchbtn">
+    <section class="section-title" id="searching">
+      <h2>Search in Mental Health</h2>
     </section>
 
-    <button id="hi"></button>
+    <section class="search-section">
+      <div class="search-div">
+        <input type="text" id="queryBox">
+        <button id="searchBtn">Search</button>
+      </div>
+    </section>
+
   </main>
 
   <footer>
@@ -68,8 +74,9 @@
       <li><a href="#editorspicks">Editors' Picks</a></li>
       <li><a href="#trending">Trending</a></li>
       <li><a href="#thelatest">The Latest</a></li>
-      <li><a href="#search" id="searchbtn">Search</a></li>
+      <li><a href="#searching" id="searchCTA">Search</a></li>
     </div>
+    <button id="hi"></button>
   </footer>
 </body>
 
