--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="#searching" id="searchCTA">Search</a></li>
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#trending">Trending</a></li>
-      <li><a href="#editorspicks">Editors' Picks</a></li>
+      <!-- <li><a href="#editorspicks">Editors' Picks</a></li> -->
       <li><a href="index.html">Home</a></li>
     </nav>
     <tagline>
@@ -34,12 +34,27 @@
       <!-- <h2>Hero Section</h2> -->
     </section>
 
-    <section class="section-title" id="editorspicks">
+    <!-- <section class="section-title" id="editorspicks">
       <h2>Editors' Picks</h2>
-    </section>
+    </section> -->
 
-    <section class="editorpicks-section">
-    </section>
+    <!-- <section class="editorpicks-section">
+      <div id="column1">
+        <h3>21 Texts to send someone who's greiving, according to a therapist</h3>
+        <a href="https://www.bustle.com/p/21-texts-to-send-someone-whos-grieving-according-to-a-therapist-17133540"
+          target="_blank">Read More</a>
+      </div>
+      <div id="column2">
+        <img src="" alt="">
+        <h3>jkfld;sga</h3>
+        <a href="#" target="_blank">Read More</a>
+      </div>
+      <div id="column3">
+        <img src="" alt="">
+        <h3>jfldhls;hd</h3>
+        <a href="#" target="_blank">Read More</a>
+      </div>
+    </section> -->
 
     <section class="section-title" id="trending">
       <h2>Trending in Mental Health</h2>
@@ -59,19 +74,21 @@
       <h2>Search in Mental Health</h2>
     </section>
 
-    <section class="search-section">
-      <div class="search-div">
+    <section class="search-page">
+      <div class="query-div">
         <input type="text" id="queryBox">
         <button id="searchBtn">Search</button>
+      </div>
+      <div class="search-section">
       </div>
     </section>
 
   </main>
 
-  <footer>
+  <footer id="footerbar">
     <div id="footernav">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#editorspicks">Editors' Picks</a></li>
+      <!-- <li><a href="#editorspicks">Editors' Picks</a></li> -->
       <li><a href="#trending">Trending</a></li>
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
