Add mobile menu, small media query updates, icons.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navClass" id="primaryNav">
       <h1><a href="index.html" id="home">MentalHealthable</a></h1>
-      <li><a href="/index.html">Refresh</a></li>
+      <li><a href="/index.html" id="refreshNavIcon"></a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#trending">Trending</a></li>
@@ -61,15 +61,19 @@
 
   </main>
 
-  <footer id="footerbar">
-    <div id="footernav">
+  <footer id="footerBar">
+    <div id="footerNav">
       <li><a href="#home">Home</a></li>
       <li><a href="#trending">Trending</a></li>
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
-      <li><a href="/index.html">Refresh</a></li>
+      <li><a href="/index.html" id="refreshFooterIcon"></a></li>
     </div>
-    <button id="hi"></button>
+    <div id="mobileFooterNav">
+      <li><a href="#home" id="scrollToTopIcon"> </a></li>
+      <li><a href="#searching" id="searchCTA">Search</a></li>
+      <li><a href="/index.html" id="refreshFooterIcon"> </a></li>
+    </div>
   </footer>
 </body>
 
