--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navClass" id="primaryNav">
       <h1><a href="#home" id="home">MentalHealthable</a></h1>
-      <li><a href="/index.html#trending" id="refreshNavIcon"></a></li>
+      <li><a href="#trending" class="rotate" id="refreshNavIcon"></a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#trending">Trending</a></li>
@@ -67,12 +67,12 @@
       <li><a href="#trending">Trending</a></li>
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
-      <li><a href="index.html#trending" id="refreshFooterIcon"></a></li>
+      <li><a href="#trending" class="rotate" id="refreshFooterIcon"></a></li>
     </div>
     <div id="mobileFooterNav">
       <li><a href="#home" id="scrollToTopIcon"> </a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
-      <li><a href="index.html#trending" id="refreshFooterIcon"> </a></li>
+      <li><a href="#trending" class="rotate" id="refreshFooterIcon"> </a></li>
     </div>
   </footer>
 </body>
