Update index, boot, assets.

--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
       <li><a href="#thelatest">The Latest</a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
       <li><a href="#trending" class="rotate" id="refreshFooterIcon"></a></li>
+      <p><em>Design by <a href="https://www.mishakessler.com" target="_blank">Misha Kessler</a>.</em></p>
     </div>
     <div id="mobileFooterNav">
       <li><a href="#home" id="scrollToTopIcon"> </a></li>
       <li><a href="#searching" id="searchCTA">Search</a></li>
       <li><a href="#trending" class="rotate" id="refreshFooterIcon"> </a></li>
+      <p><em>Design by <a href="https://www.mishakessler.com" target="_blank">Misha Kessler</a>.</em></p>
     </div>
   </footer>
 </body>
